[gd_scene load_steps=19 format=3 uid="uid://c78q7nd4s4ulx"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_bwdal"]
[ext_resource type="PackedScene" uid="uid://dpglce81f1vs" path="res://scenes/component/random_stream_player_component.tscn" id="2_le6bx"]
[ext_resource type="AudioStream" uid="uid://cd8efcjoahwk0" path="res://assets/audio/switch1.ogg" id="3_1o46j"]
[ext_resource type="AudioStream" uid="uid://dfnvqe0cwqf4m" path="res://assets/audio/switch2.ogg" id="4_mjikd"]
[ext_resource type="AudioStream" uid="uid://3wftcv2sf8dp" path="res://assets/audio/switch3.ogg" id="5_h6s0i"]
[ext_resource type="AudioStream" uid="uid://e2oeq5w1j5ni" path="res://assets/audio/switch4.ogg" id="6_yrdp5"]
[ext_resource type="AudioStream" uid="uid://cfdvtxnoxtiqg" path="res://assets/audio/switch5.ogg" id="7_41gd7"]
[ext_resource type="AudioStream" uid="uid://brj4tkmale6ej" path="res://assets/audio/switch6.ogg" id="8_oofpg"]
[ext_resource type="AudioStream" uid="uid://ca23o0wncnhlg" path="res://assets/audio/switch7.ogg" id="9_k8khi"]
[ext_resource type="AudioStream" uid="uid://c8iqfw23rbvx6" path="res://assets/audio/switch8.ogg" id="10_vmog3"]
[ext_resource type="AudioStream" uid="uid://cckmd66t7h5rg" path="res://assets/audio/switch9.ogg" id="11_qi3mi"]
[ext_resource type="AudioStream" uid="uid://ditmepyu183iv" path="res://assets/audio/switch10.ogg" id="12_3kdnv"]
[ext_resource type="Texture2D" uid="uid://cy408hqfsr6gj" path="res://scenes/ability/axe_ability/axe.png" id="13_0aita"]
[ext_resource type="Texture2D" uid="uid://cd8y3g2ch8qyu" path="res://scenes/game_object/experience_vial/experience_vial.png" id="14_gh1mm"]

[sub_resource type="Animation" id="Animation_4s2xl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_37rcx"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 0.366021, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.174533, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dfm5n"]
_data = {
"RESET": SubResource("Animation_4s2xl"),
"selected": SubResource("Animation_37rcx")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_usl2b"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(200, 0)
offset_right = 152.0
offset_bottom = 171.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_bwdal")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_le6bx")]
streams = Array[AudioStream]([ExtResource("3_1o46j"), ExtResource("4_mjikd"), ExtResource("5_h6s0i"), ExtResource("6_yrdp5"), ExtResource("7_41gd7"), ExtResource("8_oofpg"), ExtResource("9_k8khi"), ExtResource("10_vmog3"), ExtResource("11_qi3mi"), ExtResource("12_3kdnv")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dfm5n")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "test name
"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"BlueOutlineLabel"
text = "Write some description here, as you give a shit, and this is as loong as it is"
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("13_0aita")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueOutlineLabel"
text = "x0"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CostBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_usl2b")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -9.0
offset_top = -6.0
offset_right = 7.0
offset_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("14_gh1mm")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"
